Kubernetes/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-reddit-app
spec:
  rules:
  - host: "reddit.domain.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: reddit-clone-service
            port:
              number: 3000



Apply and verify:
kubectl apply -f Ingress.yml
kubectl get ingress ingress-reddit-app
